--- a/assets/css/recruit-style.css
+++ b/assets/css/recruit-style.css
@@ -18,6 +18,11 @@ dt{
 	font-family: 'Titillium Web';
 }
 
+b,
+strong {
+  font-weight: 600;
+}
+
 img {
 	height: auto; /* Make sure images are scaled correctly. */
 	max-width: 100%; /* Adhere to container width. */
@@ -46,6 +51,18 @@ table {
 .entry-content ol{
 	padding: 0 0 0 35px;
 }
+
+.dropcap {
+	float:left;
+	color: #2c2929;
+	font-size:63px;	
+	line-height:55px;
+	padding-right:25px;	
+	padding-top:2px;
+	font-family:Arial, Helvetica, sans-serif;
+	/*text-shadow: 2px 2px 1px #eee,3px 3px 1px #7b599b;*/
+	text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.4);
+ }
 
 /*--------------------------------------------------------------
 2.0 Links
@@ -95,6 +112,15 @@ a:active {
     outline: 0 none;
 }
 
+/*--------------------------------------------------------------
+4.0 Post
+--------------------------------------------------------------*/
+.thumbnail {
+	border: none;
+	border-radius: 0;
+	padding: 0;
+}
+
 
 /*--------------------------------------------------------------
 4.0 Placeholder color
@@ -112,4 +138,50 @@ a:active {
 }
 :-ms-input-placeholder { /* Internet Explorer 10+ */
    color:    #999;
+}
+
+
+blockquote {
+	border-left: none;
+	position: relative;
+	padding: 15px 40px;
+	font-family: 'Lato';
+	font-style: italic;
+}
+
+blockquote:before {
+	content: '\f10d';
+	font-family: 'Fontawesome';
+	font-size: 30px;
+	font-style: normal;
+	position: absolute;
+	left: 0;
+	top: 0;
+}
+
+blockquote p:after {
+	bottom: -10px;
+	content: '\f10e';
+	font-family: 'Fontawesome';
+	font-size: 30px;
+	font-style: normal;
+	padding-left: 15px;
+	position: absolute;
+}
+
+@media (min-width: 768px) {
+	.left-pull {
+		float: left;
+		max-width: 45%;
+		margin-right: 15px;
+		width: 100%;
+		text-align: right;
+	}
+	.right-pull {
+		float: right;
+		max-width: 45%;
+		margin-left: 15px;
+		width: 100%;
+		text-align: left;
+	}
 }
