--- a/style.css
+++ b/style.css
@@ -776,6 +776,17 @@ body.single .post-thumbnail {
 	font-size: 22px;
 }
 
+.format-quote .entry-format:before{
+	content: '\f10d';
+}
+
+.format-status .entry-content {
+	border-radius: 1px;
+	box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
+	font-family: 'Titillium Web';
+	padding: 30px 20px 20px;
+}
+
 /*--------------------------------------------------------------
 10.3 Comments
 --------------------------------------------------------------*/
